🔥 Mouse scrollin´anim in video pages better placed to avoid layout  overlaps

--- a/assets/styles.sass
+++ b/assets/styles.sass
@@ -461,10 +461,9 @@ $authors: ("jalofernandez": $jalofernandez,"haztunegociodigital": $haztunegociod
 // "ScrollDownItem" layout component
 .mouse-scroll
   display: block
-  margin: 0 auto
   width: 24px
   height: 100px
-  margin-top: 125px
+  margin: 3rem auto 0
   cursor: pointer
 
 .scroll-arrow
